@@ -1,24 +1,13 @@
-FROM openjdk:11-jdk as builder
-
+FROM openjdk:11-jre
+VOLUME /tmp
 ARG JAR_FILE
-
-COPY ${JAR_FILE} application.jar
-RUN java -Djarmode=layertools -jar application.jar extract
-
-FROM adoptopenjdk:11-jre-hotspot
-COPY --from=builder dependencies/ ./
-COPY --from=builder snapshot-dependencies/ ./
-COPY --from=builder spring-boot-loader/ ./
-COPY --from=builder application/ ./
-
-USER root
-RUN apt-get install -y locales
-RUN locale-gen fr_FR.utf8
-ENV LANG fr_FR.UTF-8
-ENV LANGUAGE fr_FR:fr
-ENV LC_ALL fr_FR.UTF-8
-
-#ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
-ENTRYPOINT ["java", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED", "org.springframework.boot.loader.JarLauncher"]
+COPY ${JAR_FILE} app.jar
 
 
+EXPOSE 8776
+
+# Définition de l'encodage de l'environnement à UTF-8
+ENV LANG C.UTF-8
+
+# Commande pour lancer l'application Spring Boot
+ENTRYPOINT exec java -jar /app.jar
